# nrpc-ts

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json  tsconfig.json
lang/: common_base.ts  common_transpiler.ts
lib/: client_socket.ts  client_socket_ws.ts  common_base.ts  index.ts  routing_socket.ts  server_socket.ts  server_socket_ws.ts  service_client.ts  serving_socket.ts
test/: test_class.ts  test_cmd_line.ts  test_compiler.ts  test_express.ts  test_express_page.css  test_express_page.html  test_express_page.tsx  test_show.ts  test_show_cli.ts  test_show_cli_client.ts  test_show_client.ts  test_transpiler.ts  test_typescript.ts  test_zmq.ts
test/test_show/: list_manager.ts
